outputting taco ingredients dynamically

--- a/src/components/Taco/TacoIngredient/TacoIngredient.module.css
+++ b/src/components/Taco/TacoIngredient/TacoIngredient.module.css
@@ -4,7 +4,8 @@
     background: linear-gradient(rgb(240, 174, 74), rgb(255, 166, 0));
     border-radius: 0 0 100px 100px;
     box-shadow: inset -15px 0 #f3690c;
-    margin: 2% auto;
+    margin: 0 auto 2% auto;
+
 }
 
 /* .BreadTop {
@@ -85,14 +86,14 @@
     width: 80%;
     height: 8%;
     background: linear-gradient(#7f3608, #702e05);
-    margin: 2% auto;
+    margin: 0 auto;
     border-radius: 15px;
 }
 
 .Cheese {
     width: 80%;
     height: 4.5%;
-    margin: 2% auto;
+    margin: 0 auto;
     background: linear-gradient(#f4d004, #d6bb22);
     border-radius: 20px;
 }
@@ -100,7 +101,7 @@
 .Salsa {
   width: 80%;
   height: 4.5%;
-  margin: 2% auto;
+  margin: 0 auto;
   background: linear-gradient(#f43404, #d65b22);
   border-radius: 20px;
 }
@@ -108,7 +109,7 @@
 .Salad {
     width: 85%;
     height: 7%;
-    margin: 2% auto;
+    margin: 0 auto;
     background: linear-gradient(#228c1d, #91ce50);
     border-radius: 20px;
 }
