--- a/src/components/Taco/BuildControls/BuildControls.module.css
+++ b/src/components/Taco/BuildControls/BuildControls.module.css
@@ -1,6 +1,6 @@
 .BuildControls {
     width: 100%;
-    background-color: aqua;
+    background-color: lightslategray;
     display: flex;
     flex-flow: column;
     align-items: center;
