--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,18 +1,14 @@
 .NavigationItem {
-    margin: 0;
+    margin: 10px 10px;
     box-sizing: border-box;
-    display: flex;
-    height: 100%;
-    width: auto;
-    align-items: center;
+    display: block;
+    width: 100%;
 
 }
 
 .NavigationItem a {
-    color: white;
+    color: #8F5C2C;
     text-decoration: none;
-    padding: 16px 10px;
-    border-bottom: solid 4px transparent;
     height: 100%;
     box-sizing: border-box;
     display: block;
@@ -21,7 +17,32 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    background-color: #8F5C2C;
-    border-bottom: 4px solid #40A4C8;
-    color: white;
+    color: #40A4C8;
+}
+
+@media (min-width: 500px) {
+    .NavigationItem {
+        margin: 0;
+        display: flex;
+        height: 100%;
+        width: auto;
+        align-items: center;
+    
+    }
+    
+    .NavigationItem a {
+        color: white;
+        text-decoration: none;
+        padding: 16px 10px;
+        border-bottom: solid 4px transparent;
+        height: 100%;
+    }
+    
+    .NavigationItem a:hover,
+    .NavigationItem a:active,
+    .NavigationItem a.active {
+        background-color: #8F5C2C;
+        border-bottom: 4px solid #40A4C8;
+        color: white;
+    }
 }
