--- a/src/components/Taco/TacoIngredient/TacoIngredient.module.css
+++ b/src/components/Taco/TacoIngredient/TacoIngredient.module.css
@@ -19,7 +19,7 @@
     position: relative;
 } */
 
-/* .Seeds1 {
+.Seeds1 {
     width: 10%;
     height: 15%;
     position: absolute;
@@ -29,9 +29,9 @@
     border-radius: 40%;
     transform: rotate(-20deg);
     box-shadow: inset -2px -3px #c9c9c9;
-} */
+}
 
-/* .Seeds1:after {
+.Seeds1:after {
     content: "";
     width: 100%;
     height: 100%;
@@ -80,12 +80,12 @@
     border-radius: 40%;
     transform: rotate(90deg);
     box-shadow: inset 1px 3px #c9c9c9;
-  } */
+  }
   
 
 .Meat {
-    width: 70%;
-    height: 8%;
+    width: 60%;
+    height: 6%;
     background: linear-gradient(#7f3608, #702e05);
     margin: 0 auto;
     /* border-radius: 15px; */
@@ -93,8 +93,8 @@
 }
 
 .Cheese {
-    width: 70%;
-    height: 4.5%;
+    width: 65%;
+    height: 4%;
     margin: 0 auto;
     background: linear-gradient(#f4d004, #d6bb22);
     /* border-radius: 20px; */
@@ -102,8 +102,8 @@
 }
 
 .Salsa {
-  width: 70%;
-  height: 4.5%;
+  width: 0%;
+  height: 3%;
   margin: 0 auto;
   background: linear-gradient(#f43404, #d65b22);
   /* border-radius: 20px; */
@@ -112,11 +112,12 @@
 
 .Salad {
     width: 75%;
-    height: 7%;
+    height: 5%;
     margin: 0 auto;
     background: linear-gradient(#228c1d, #91ce50);
     /* border-radius: 20px; */
     border-radius:  100px 100px 0 0;
+    z-index: 1;
 }
 
 .Bacon {
